--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,10 +12,12 @@
 </head>
 <body>
     <div id="navbar-container"></div>
+    
     <main>
         <h1 style="text-align: center; margin-top: 25vh;">Checkout not implemented yet</h1>
         <p style="text-align: center;">This is where the product data is sent to Shopify API</p>
     </main>
+
     <script src="../js/components.js"></script>
     <script src="../js/cart.js"></script>
     <script src="../js/currency.js"></script>
