--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +11,10 @@
     <link rel="stylesheet" href="../css/cart.css">
     <link rel="stylesheet" href="../css/currency.css">
 </head>
+
 <body>
     <div id="navbar-container"></div>
+    <!-- big block of text -->
     <main class="policy-main-content">
         <h1 style="text-align: center; margin-top: 15vh;">PRIVACY POLICY</h1>
         <p style="font-weight: bold;">Effective Date: 21.05.2025</p>
@@ -45,6 +48,7 @@
         <br>
         <p>Questions? Reach out to privacy@uncomfort.co or use our contact form.</p>
     </main>
+    <!-- footer -->
     <footer>
         <div class="footer-divider"></div>
         <div class="footer-main">
