--- a/pages/product.html
+++ b/pages/product.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,11 +13,13 @@
 
 <body>
     <div id="navbar-container"></div>
+    <!-- product content is rendered dynamically in product.js -->
     <main class="product-page-main-content">
         <section id="product" class="product-section">
         </section>
     </main>
-
+    
+    <!-- footer -->
     <footer>
         <div class="footer-divider"></div>
         <div class="footer-main">
@@ -36,6 +39,7 @@
             <p>&copy; 2025 unComfort. All rights reserved.</p>
         </div>
     </footer>
+
     <script src="/unComfort/js/components.js"></script>
     <script src="/unComfort/js/productsData.js"></script>
     <script src="/unComfort/js/shop.js"></script>
