--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,6 +1,6 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,9 @@
 
 <body>
     <div id="navbar-container"></div>
+    <!-- sidebar is injected by shop.js -->
     <div id="shop-sidebar"></div>
+    <!-- product cards are rendered dynamically by shop.js -->
     <main class="shop-page-main-content">
         <section id="shop" class="shop-section">
             <div class="container">
@@ -41,6 +43,7 @@
                 <p>&copy; 2025 unComfort. All rights reserved.</p>
             </div>
     </footer>
+    
     <script src="/unComfort/js/components.js"></script>
     <script src="/unComfort/js/productsData.js"></script>
     <script src="/unComfort/js/shop.js"></script>
