--- a/pages/lookbook.html
+++ b/pages/lookbook.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,11 +10,12 @@
     <link rel="stylesheet" href="../css/cart.css">
     <link rel="stylesheet" href="../css/currency.css">
 </head>
+
 <body>
     <div id="navbar-container"></div>
     <main class="lookbook-page-main-content">
         <section id="lookbook" class="lookbook-section">
-            <!-- Sidebar Thumbnails -->
+            <!-- sidebar thumbnails -->
             <aside>
                 <img class="active" src="../img/lookbook_1.png" alt="Lookbook 1">
                 <img src="../img/lookbook_2.png" alt="Lookbook 2">
@@ -22,9 +24,9 @@
                 <img src="../img/lookbook_5.png" alt="Lookbook 5">
             </aside>
 
-            <!-- Main Content -->
+            <!-- main content -->
             <main>
-                <!-- Collection/Product/Date Info -->
+                <!-- collection info, images will hide this section when scrolled -->
                 <div class="lookbook-collection-info">
                     <div>
                         <div style="letter-spacing: 3px;">COLLECTION</div>
@@ -39,7 +41,7 @@
                         <div style="margin-top: 6px;">feb 2025</div>
                     </div>
                 </div>
-                <!-- Main Image -->
+                <!-- main image carousel -->
                 <div class="lookbook-image-container">
                     <img src="../img/lookbook_1.png" alt="1">
                     <img src="../img/lookbook_2.png" alt="2">
@@ -47,8 +49,6 @@
                     <img src="../img/lookbook_4.png" alt="4">
                     <img src="../img/lookbook_5.png" alt="5">
                 </div>
-                <!-- Bottom Color Bar (decorative) -->
-                <div style="width: 100%; height: 24px; background: url('../img/lookbook_bar.png') repeat-x; background-size: cover;"></div>
             </main>
         </section>
     </main>
@@ -72,6 +72,7 @@
             <p>&copy; 2025 unComfort. All rights reserved.</p>
         </div>
     </footer>
+
     <script src="/unComfort/js/components.js"></script>
     <script src="/unComfort/js/lookbook.js"></script>
     <script src="/unComfort/js/cart.js"></script>
