--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +10,11 @@
     <link rel="stylesheet" href="../css/policies.css">
     <link rel="stylesheet" href="../css/cart.css">
     <link rel="stylesheet" href="../css/currency.css">
-
 </head>
+
 <body>
     <div id="navbar-container"></div>
+    <!-- policy content -->
     <main class="policy-main-content">
         <h1 style="text-align: center; margin-top: 15vh;">SHIPPING POLICY</h1>
         <p style="font-weight: bold;">Effective Date: 21.05.2025</p>
@@ -44,6 +46,7 @@
         <br>
         <p>Questions? Reach out to support@uncomfort.co or use our contact form.</p>
     </main>
+
     <footer>
         <div class="footer-divider"></div>
         <div class="footer-main">
@@ -63,6 +66,7 @@
             <p>&copy; 2025 unComfort. All rights reserved.</p>
         </div>
     </footer>
+    
     <script src="/unComfort/js/components.js"></script>
     <script src="/unComfort/js/cart.js"></script>
     <script src="/unComfort/js/currency.js"></script>
