--- a/pages/tos.html
+++ b/pages/tos.html
@@ -1,3 +1,4 @@
+<!-- created by ty behnke - 47069374 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,7 @@
 
 <body>
     <div id="navbar-container"></div>
+    <!-- policy content-->
     <main class="policy-main-content">
         <h1 style="text-align: center; margin-top: 15vh;">TERMS OF SERVICE</h1>
         <p style="font-weight: bold;">Effective Date: 21.05.2025</p>
@@ -64,6 +66,7 @@
             <p>&copy; 2025 unComfort. All rights reserved.</p>
         </div>
     </footer>
+    
     <script src="/unComfort/js/components.js"></script>
     <script src="/unComfort/js/cart.js"></script>
     <script src="/unComfort/js/currency.js"></script>
